added watch list function to add movie title and year to watch list, plus clear list button, plus alerts

--- a/style.css
+++ b/style.css
@@ -44,6 +44,11 @@ img#exploreresultafterclick {
     width: 50px;
 }
 
+img#watchImg {
+    width: 200px;
+    cursor: pointer;
+}
+
 img#allmovieslist {
     cursor: pointer;
 }
