--- a/style.css
+++ b/style.css
@@ -40,10 +40,6 @@ p#search-result img{
     width: 350px;
 }
 
-img#exploreresultafterclick {
-    width: 50px;
-}
-
 img#watchImg {
     width: 200px;
     cursor: pointer;
@@ -51,4 +47,19 @@ img#watchImg {
 
 img#allmovieslist {
     cursor: pointer;
+}
+
+li {
+    font-family: "Helvetica Neue", "Arial", sans-serif;
+}
+
+button#remove {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 6px 14px;
+  font-family: "Helvetica Neue", "Arial", sans-serif;
+  border-radius: 6px;
+  border: none;
+  background: #6E6D70;
 }
