--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@ div#buttons {
     text-align: center;
 }
 
+div#movie-lists {
+    text-align: center;
+}
+
+p#watch-list {
+    text-align: center;
+}
+
 div#search-result-display {
     text-align: center;
 }
@@ -60,13 +68,23 @@ li {
     font-family: "Helvetica Neue", "Arial", sans-serif;
 }
 
+p#watch-list {
+    text-align: center;
+}
+
+button#clear-list {
+    text-align: center;
+}
+
 button#remove {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 6px 14px;
+  padding: 4px 12px;
   font-family: "Helvetica Neue", "Arial", sans-serif;
-  border-radius: 6px;
+  font-size: 12px;
+  border-radius: 5px;
   border: none;
   background: #6E6D70;
+  text-align: center;
 }
