--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ form#movie-search {
     text-align: center;
 }
 
-h4#homescreen-message {
+div#homescreen {
     font-family: "Helvetica Neue", "Arial", sans-serif;
     text-align: center;
     color: white;
