--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ div#movie-lists {
     text-align: center;
 }
 
+p#description{
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
 p#watch-list {
     text-align: center;
 }
@@ -47,12 +52,16 @@ body {
     background: cornflowerblue;
   }
 
-p#explore-result img {
+img#allmovieslist {
     width: 200px;
 }
 
-p#search-result img{
-    width: 200px;
+img#explore-img {
+    width: 250px
+}
+
+img#search-img{
+    width: 250px;
 }
 
 h3#watch-header{
@@ -61,9 +70,9 @@ h3#watch-header{
     color: white;
 }
 
-img#watchImg {
-    width: 200px;
-    cursor: pointer;
+img#banner {
+    width: 500px;
+    margin-top: 50px;
 }
 
 img#allmovieslist {
